force-app/main/default/objects/Lead/fields/Actual_amount__c.field-meta.xml
<CustomField>
    <fullName>Actual_amount__c</fullName>
    <formula>Opportunity__r.Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>