force-app/main/default/objects/Lead/fields/Actual_Amount_From_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Actual_Amount_From_Opportunity__c</fullName>
    <description>Actual Amount From Opportunity</description>
    <label>Actual Amount From Opportunity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>