force-app/main/default/objects/Lead/fields/Age_Range__c.field-meta.xml
<CustomField>
    <fullName>Age_Range__c</fullName>
    <label>Age Range</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>18 - 22</fullName>
            </value>
            <value>
                <fullName>23 - 30</fullName>
            </value>
            <value>
                <fullName>31 - 40</fullName>
            </value>
            <value>
                <fullName>41 - 50</fullName>
            </value>
            <value>
                <fullName>50&gt;</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>