force-app/main/default/objects/Lead/fields/Business_Phone_2__c.field-meta.xml
<CustomField>
    <fullName>Business_Phone_2__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Business Phone 2</label>
    <type>Phone</type>
</CustomField>