force-app/main/default/objects/Lead/fields/Collect_and_Review_Customer_Document_PK__c.field-meta.xml
<CustomField>
    <fullName>Collect_and_Review_Customer_Document_PK__c</fullName>
    <label>Collect and Review Customer Document</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>