force-app/main/default/objects/Lead/fields/Collect_Customer_Asset_Liabili_PK__c.field-meta.xml
<CustomField>
    <fullName>Collect_Customer_Asset_Liabili_PK__c</fullName>
    <inlineHelpText>Collect Customer Asset &amp; Liabilities</inlineHelpText>
    <label>Collect Customer A&amp;L</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>