force-app/main/default/objects/Lead/fields/Contact_Made__c.field-meta.xml
<CustomField>
    <fullName>Contact_Made__c</fullName>
    <formula>IF(
And(
  ISBLANK(Last_Contact_Made__c ),

 ISBLANK( Last_Call_Attempt__c  )
)

, 
&#39;No Contact Made&#39;
, 
IF(
And(
  ISBLANK(Last_Contact_Made__c ),

 NOT(ISBLANK( Last_Call_Attempt__c ) )
)

, 
&#39; Contact Attempted - No Success&#39;
, 

IF(
And(
  Not(ISBLANK(Last_Contact_Made__c )),

 NOT(ISBLANK( Last_Call_Attempt__c ) )
)

, 
&#39;Contact Made&#39;
, 








&#39;Error&#39;)))</formula>
    <label>Make Customer Contact</label>
    <type>Text</type>
</CustomField>