force-app/main/default/objects/Lead/fields/Converted_Date_calc__c.field-meta.xml
<CustomField>
    <fullName>Converted_Date_calc__c</fullName>
    <formula>DATETIMEVALUE( ConvertedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Converted Date (Date/Time)</label>
    <type>DateTime</type>
</CustomField>