force-app/main/default/objects/Lead/fields/Date_of_Incorporation__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Incorporation__c</fullName>
    <description>If self employed</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Date of Incorporation</label>
    <type>Date</type>
</CustomField>