force-app/main/default/objects/Lead/fields/DB_Lead_Age__c.field-meta.xml
<CustomField>
    <fullName>DB_Lead_Age__c</fullName>
    <description
  >This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
    <formula>NOW() - LastModifiedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DB Lead Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>