force-app/main/default/objects/Lead/fields/Determine_Customer_Eligibility_PK__c.field-meta.xml
<CustomField>
    <fullName>Determine_Customer_Eligibility_PK__c</fullName>
    <label>Determine Customer Eligibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Eligible</fullName>
            </value>
            <value>
                <fullName>Not Eligible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>