force-app/main/default/objects/Lead/fields/Determine_if_product_is_correct_PK__c.field-meta.xml
<CustomField>
    <fullName>Determine_if_product_is_correct_PK__c</fullName>
    <label>Determine if product is correct</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>