force-app/main/default/objects/Lead/fields/Different_Mailing_Address__c.field-meta.xml
<CustomField>
    <fullName>Different_Mailing_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Different Mailing Address</label>
    <type>Checkbox</type>
</CustomField>