force-app/main/default/objects/Lead/fields/Disqualification_Reason__c.field-meta.xml
<CustomField>
    <fullName>Disqualification_Reason__c</fullName>
    <label>Disqualification Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unable to make contact</fullName>
            </value>
            <value>
                <fullName>Customer does not fulfill requirements</fullName>
            </value>
            <value>
                <fullName>Customer is not Interested in product</fullName>
            </value>
            <value>
                <fullName>Product no longer meets customers’ needs</fullName>
            </value>
            <value>
                <fullName>Customer has gone to a competitor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>