force-app/main/default/objects/Lead/fields/Emergency_Contact_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Last_Name__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Emergency Contact Last Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>