force-app/main/default/objects/Lead/fields/Emergency_Contact_Middle_Initial__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Middle_Initial__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Emergency Contact Middle Initial</label>
    <length>1</length>
    <type>Text</type>
</CustomField>