force-app/main/default/objects/Lead/fields/Emergency_Contact_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Mobile__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Emergency Contact Mobile</label>
    <type>Phone</type>
</CustomField>