force-app/main/default/objects/Lead/fields/Emergency_Contact_Personal_Email__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Personal_Email__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Emergency Contact Personal Email</label>
    <type>Email</type>
</CustomField>