force-app/main/default/objects/Lead/fields/Employer_Address__c.field-meta.xml
<CustomField>
    <fullName>Employer_Address__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Employer Address</label>
    <length>50</length>
    <type>Text</type>
</CustomField>