force-app/main/default/objects/Lead/fields/Employer_Address_Street_3__c.field-meta.xml
<CustomField>
    <fullName>Employer_Address_Street_3__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Employer Address Street 3</label>
    <length>40</length>
    <type>Text</type>
</CustomField>