force-app/main/default/objects/Lead/fields/Employer_Area_District__c.field-meta.xml
<CustomField>
    <fullName>Employer_Area_District__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Employer Area/District</label>
    <length>40</length>
    <type>Text</type>
</CustomField>