force-app/main/default/objects/Lead/fields/Employer_City__c.field-meta.xml
<CustomField>
    <fullName>Employer_City__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Employer City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>