force-app/main/default/objects/Lead/fields/Employer_City_Town__c.field-meta.xml
<CustomField>
    <fullName>Employer_City_Town__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Employer City/Town</label>
    <length>40</length>
    <type>Text</type>
</CustomField>