force-app/main/default/objects/Lead/fields/Employer_Industry__c.field-meta.xml
<CustomField>
    <fullName>Employer_Industry__c</fullName>
    <label>Employer Industry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Industry_Category_IFRS_Employed</valueSetName>
    </valueSet>
</CustomField>