force-app/main/default/objects/Lead/fields/Employer_Phone_1__c.field-meta.xml
<CustomField>
    <fullName>Employer_Phone_1__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Employer Phone 1</label>
    <type>Phone</type>
</CustomField>