force-app/main/default/objects/Lead/fields/Employer_Post_Office_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Employer_Post_Office_Zip_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Employer Post Office/Zip Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>