force-app/main/default/objects/Lead/fields/Employer_Province_Parish_State__c.field-meta.xml
<CustomField>
    <fullName>Employer_Province_Parish_State__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Employer Province/Parish/State</label>
    <length>40</length>
    <type>Text</type>
</CustomField>