force-app/main/default/objects/Lead/fields/Employment_Description__c.field-meta.xml
<CustomField>
    <fullName>Employment_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Employment Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>