force-app/main/default/objects/Lead/fields/Escalate_to_Tier2__c.field-meta.xml
<CustomField>
    <fullName>Escalate_to_Tier2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Escalate to Tier2</label>
    <type>Checkbox</type>
</CustomField>