force-app/main/default/objects/Lead/fields/Escalated_By__c.field-meta.xml
<CustomField>
    <fullName>Escalated_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Escalated By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads_and_Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>