force-app/main/default/objects/Lead/fields/FinServ__Employer__c.field-meta.xml
<CustomField>
    <fullName>FinServ__Employer__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Employer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>