force-app/main/default/objects/Lead/fields/FinServ__ReferredByUser__c.field-meta.xml
<CustomField>
    <fullName>FinServ__ReferredByUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Internal Referrer</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.UserType</field>
            <operation>equals</operation>
            <value>Standard</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>LeadUserReferrals</relationshipName>
    <type>Lookup</type>
</CustomField>