force-app/main/default/objects/Lead/fields/Generate_C__c.field-meta.xml
<CustomField>
    <fullName>Generate_C__c</fullName>
    <label>Generate Customer Document Checklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>