force-app/main/default/objects/Lead/fields/Gross_Monthly_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Gross_Monthly_Expenses__c</fullName>
    <description>Unsecured Loan form</description>
    <label>Gross Monthly Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>