force-app/main/default/objects/Lead/fields/Highest_Level_of_Education_Attained__c.field-meta.xml
<CustomField>
    <fullName>Highest_Level_of_Education_Attained__c</fullName>
    <label>Highest Level of Education Attained</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Education</valueSetName>
    </valueSet>
</CustomField>