force-app/main/default/objects/Lead/fields/Issue_Letter_of_Pre_Aproval__c.field-meta.xml
<CustomField>
    <fullName>Issue_Letter_of_Pre_Aproval__c</fullName>
    <label>Issue Letter of Pre-Approval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>