force-app/main/default/objects/Lead/fields/Jamaican_Tax_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>Jamaican_Tax_Registration_Number__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Jamaican Tax Registration Number</label>
    <length>9</length>
    <type>Text</type>
</CustomField>