force-app/main/default/objects/Lead/fields/JN_Campaign__c.field-meta.xml
<CustomField>
    <fullName>JN_Campaign__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>JN Campaign</label>
    <length>40</length>
    <type>Text</type>
</CustomField>