force-app/main/default/objects/Lead/fields/JN_Site_Form_Completed_Flag__c.field-meta.xml
<CustomField>
    <fullName>JN_Site_Form_Completed_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if the jn site was completed successfully.</description>
    <label>JN Site Form Completed</label>
    <type>Checkbox</type>
</CustomField>