force-app/main/default/objects/Lead/fields/Last_Call_Attempt__c.field-meta.xml
<CustomField>
    <fullName>Last_Call_Attempt__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Call Attempt</label>
    <type>DateTime</type>
</CustomField>