force-app/main/default/objects/Lead/fields/Last_Contact_Made__c.field-meta.xml
<CustomField>
    <fullName>Last_Contact_Made__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Contact Made</label>
    <type>DateTime</type>
</CustomField>