force-app/main/default/objects/Lead/fields/Last_Modified_Date_calc__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_Date_calc__c</fullName>
    <formula>DATETIMEVALUE( LastModifiedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Modified Date (Date/Time)</label>
    <type>DateTime</type>
</CustomField>