force-app/main/default/objects/Lead/fields/Last_Position_Held__c.field-meta.xml
<CustomField>
    <fullName>Last_Position_Held__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Position Held</label>
    <length>50</length>
    <type>Text</type>
</CustomField>