force-app/main/default/objects/Lead/fields/Lead_Disqualified__c.field-meta.xml
<CustomField>
    <fullName>Lead_Disqualified__c</fullName>
    <label>Lead Disqualified</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
                <default>true</default>
                <label>NO</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>