force-app/main/default/objects/Lead/fields/Lead_Estimated_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Lead_Estimated_Close_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Lead Estimated Close Date</label>
    <type>Date</type>
</CustomField>