force-app/main/default/objects/Lead/fields/Lead_Generation_Number__c.field-meta.xml
<CustomField>
    <fullName>Lead_Generation_Number__c</fullName>
    <externalId>true</externalId>
    <label>Lead Generation Number</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>